# gpu-benchmark-suite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml  setup_cuda.py
examples/: README.md
examples/01_cuda_basics/: vector_add_example.py
kernels/: cuda_bindings.cpp  vector_kernels.cu  vector_kernels.cuh
src/gpu_benchmark/: __init__.py
src/gpu_benchmark/benchmarks/: __init__.py  math.py  memory.py
src/gpu_benchmark/benchmarks/cuda/: __init__.py
src/gpu_benchmark/benchmarks/pytorch/: __init__.py
src/gpu_benchmark/benchmarks/triton/: __init__.py
src/gpu_benchmark/cli/: __init__.py
src/gpu_benchmark/core/: __init__.py  benchmark_runner.py  device_info.py  metrics.py
src/gpu_benchmark/metrics/: __init__.py
src/gpu_benchmark/profiling/: __init__.py
src/gpu_benchmark/utils/: __init__.py
tests/: test_core.py
